# test-encoding-model

./: .gitignore  README.md  download_from_sciebo.py  pixi.toml  pyproject.toml
notebooks/: data_analysis.ipynb  data_exploration.ipynb  data_exploration_new_data.ipynb  load_data.ipynb  original.m  reproduce_model_fit.ipynb  reproduce_simon_MATLAB_code.ipynb  simon_code.ipynb
