[project]
name = "test-encoding-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tqdm>=4.67.3",
    "xarray>=2026.1.0",
]
